# raidionics_seg_lib

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_gpu  LICENSE.md  README.md  blank_main_config.ini  main.py  pyproject.toml  requirements.txt  setup.py  setup_mac_m1.py
.github/workflows/: CI-mac-m1.yml  CI-mac.yml  CI-ubuntu.yml  CI-windows.yml  build.yml  build_macos.yml  build_macos_arm.yml  build_macos_arm_11.yml  build_ubuntu.yml  build_windows.yml  docker.yml  integration_tests.yml  publish.yml
notebooks/: 01_run_simple_segmentation.ipynb
raidionicsseg/: __main__.py  fit.py
raidionicsseg/Inference/: data_augmentation.py  fit_CT.py  fit_MR.py  predictions.py  predictions_classification.py  predictions_reconstruction.py
raidionicsseg/PreProcessing/: brain_clipping.py  foreground_selection.py  mediastinum_clipping.py  pre_processing.py
raidionicsseg/Utils/: configuration_parser.py  io.py  resample_or_resize.py  volume_utilities.py
raidionicsseg/Utils/Torch/: modules.py
shell/: format.sh
tests/: conftest.py  download_resources.py  inference_test.py  inference_test_docker.py  inference_test_docker_gpu.py  inference_test_time_augmentation.py  inference_test_torch_model.py
tests/generic_tests/: test_inference_classification_simple.py  test_inference_segmentation_advanced.py  test_inference_segmentation_diffloader.py  test_inference_segmentation_mediastinum.py  test_inference_segmentation_reconstruction.py  test_inference_segmentation_simple.py  test_inference_segmentation_test_time_augmentation.py
tests/local_docker_tests/: inference_test_docker.py  test_docker_inference_segmentation_gpu.py  test_docker_inference_segmentation_simple.py
